@@ -9,10 +9,13 @@ S3method(coord_aspect,fixed)
 S3method(coord_aspect,map)
 S3method(coord_aspect,polar)
 S3method(coord_aspect,quickmap)
+S3method(coord_dimension,continuous)
+S3method(coord_dimension,discrete)
 S3method(coord_distance,cartesian)
 S3method(coord_distance,map)
 S3method(coord_distance,polar)
 S3method(coord_distance,trans)
+S3method(coord_expand,default)
 S3method(coord_expand_defaults,default)
 S3method(coord_expand_defaults,polar)
 S3method(coord_labels,default)
