@@ -4,7 +4,7 @@
 \alias{coord_expand_defaults}
 \title{Set the default expand values for the scale, if NA}
 \usage{
-coord_expand_defaults(coord, scale, aesthetic = NULL)
+coord_expand_defaults(.coord, scale, aesthetic = NULL)
 }
 \description{
 Set the default expand values for the scale, if NA
